Don't repeat the name of Schleuder in vain.

--- a/docs/changes/v3.0.md
+++ b/docs/changes/v3.0.md
@@ -1,6 +1,6 @@
 ---
 layout: docs
-title: Schleuder ★ Changes ★ v3.0
+title: Changes ★ v3.0
 ---
 
 User-relevant changes in version 3.0 compared to version 2.2.
